hphp/hack/test/typecheck/reactive/owned_mutable5.php.exp
File "owned_mutable5.php", line 4, characters 12-34:
`__OwnedMutable` annotated parameters are only allowed in reactive functions. (Parsing[1002])
