hphp/hack/test/typecheck/reactive/owned_mutable5.php
<?hh // partial

// ERROR
function f(<<__OwnedMutable>> A $a) {
}

interface A {}
